--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -74,3 +74,51 @@
 .display-select {
   width: 100%;
 }
+
+/* ▼ スマートフォン対応 */
+@media screen and (max-width: 480px) {
+  .taskList {
+    width: 100%;
+    margin: 20px 10px;
+  }
+
+  .list-header,
+  .tasks-header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .list-tab-item {
+    width: auto;
+    padding: 8px 12px;
+    font-size: 14px;
+  }
+
+  .task-item {
+    font-size: 14px;
+    height: auto;
+    padding: 10px;
+  }
+
+  .display-select-wrapper {
+    width: 100%;
+    margin: 10px 0;
+  }
+}
+
+/* ▼ タブレット対応 */
+@media screen and (max-width: 768px) {
+  .taskList {
+    width: 95%;
+    margin: 30px auto;
+  }
+
+  .list-tab-item {
+    width: auto;
+    padding: 10px 16px;
+  }
+
+  .task-item {
+    font-size: 15px;
+  }
+}
