--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -2,77 +2,77 @@
   margin: 50px auto;
   list-style: none;
   width: 1000px;
-}
 
-.list-header {
-  display: flex;
-  justify-content: space-between;
-}
+  .list-header {
+    display: flex;
+    justify-content: space-between;
 
-.list-menu {
-  text-align: right;
-}
+    .list-menu {
+      text-align: right;
+    }
+  }
 
-.list-tab {
-  list-style: none;
-  display: flex;
-  overflow-x: auto;
-}
+  .list-tab {
+    list-style: none;
+    display: flex;
+    overflow-x: auto;
 
-.list-tab-item {
-  flex-shrink: 0;
-  width: 100px;
-  padding: 0 25px;
-  text-overflow: normal;
-  margin-right: 5px;
-  border: solid 1px #242f9b;
-  justify-content: center;
-  align-items: center;
-}
+    .list-tab-item {
+      flex-shrink: 0;
+      width: 100px;
+      padding: 0 25px;
+      text-overflow: normal;
+      margin-right: 5px;
+      border: solid 1px #242f9b;
+      justify-content: center;
+      align-items: center;
 
-.active {
-  background-color: #242f9b;
-  color: #ffffff;
-}
+      &.active {
+        background-color: #242f9b;
+        color: #ffffff;
+      }
+    }
+  }
 
-.tasks {
-  margin-top: 25px;
-}
+  .tasks {
+    margin-top: 25px;
 
-.tasks-header {
-  display: flex;
-  justify-content: space-between;
-}
+    .tasks-header {
+      display: flex;
+      justify-content: space-between;
+    }
 
-.task-item {
-  list-style-type: none;
-  height: 70px;
-  width: calc(100% - 25px);
-  background-color: #f5f5f5;
-  padding-left: 25px;
-  font-size: large;
-  border: solid 1px #ffffff;
-}
+    .task-item {
+      list-style-type: none;
+      height: 70px;
+      width: calc(100% - 25px);
+      background-color: #f5f5f5;
+      padding-left: 25px;
+      font-size: large;
+      border: solid 1px #ffffff;
 
-.task-item-link {
-  display: block;
-  width: 100%;
-  height: 100%;
-  text-decoration: none;
-  color: #000000;
-}
+      .task-item-link {
+        display: block;
+        width: 100%;
+        height: 100%;
+        text-decoration: none;
+        color: #000000;
+      }
+    }
 
-.error-message {
-  color: #ff3333;
-}
+    .display-select-wrapper {
+      width: 100px;
+      margin: 0 0 25px auto;
 
-.display-select-wrapper {
-  width: 100px;
-  margin: 0 0 25px auto;
-}
+      .display-select {
+        width: 100%;
+      }
+    }
+  }
 
-.display-select {
-  width: 100%;
+  .error-message {
+    color: #ff3333;
+  }
 }
 
 /* ▼ スマートフォン対応 */
@@ -80,45 +80,45 @@
   .taskList {
     width: 100%;
     margin: 20px 10px;
-  }
 
-  .list-header,
-  .tasks-header {
-    flex-direction: column;
-    align-items: flex-start;
-  }
+    .list-header,
+    .tasks .tasks-header {
+      flex-direction: column;
+      align-items: flex-start;
+    }
 
-  .list-tab-item {
-    width: auto;
-    padding: 8px 12px;
-    font-size: 14px;
-  }
+    .list-tab .list-tab-item {
+      width: auto;
+      padding: 8px 12px;
+      font-size: 14px;
+    }
 
-  .task-item {
-    font-size: 14px;
-    height: auto;
-    padding: 10px;
-  }
+    .tasks .task-item {
+      font-size: 14px;
+      height: auto;
+      padding: 10px;
+    }
 
-  .display-select-wrapper {
-    width: 100%;
-    margin: 10px 0;
+    .tasks .display-select-wrapper {
+      width: 100%;
+      margin: 10px 0;
+    }
   }
 }
 
 /* ▼ タブレット対応 */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1080px) {
   .taskList {
     width: 95%;
     margin: 30px auto;
-  }
 
-  .list-tab-item {
-    width: auto;
-    padding: 10px 16px;
-  }
+    .list-tab .list-tab-item {
+      width: auto;
+      padding: 10px 16px;
+    }
 
-  .task-item {
-    font-size: 15px;
+    .tasks .task-item {
+      font-size: 15px;
+    }
   }
 }
